--- a/other.html
+++ b/other.html
@@ -37,26 +37,26 @@
        </header>
        <section>
        <h3>Museums In NYC </h3>
-       <p>If it's to cold out and you still want to check out some art instead of walking around all over NYC below you have sevral art museums in NYC you could go and visit.</p>
+       <p class="article-intro">If it's to cold out and you still want to check out some art instead of walking around all over NYC below you have sevral art museums in NYC you could go and visit.</p>
        </section>
 
        <figure>
          <img src="images/moma.jpg" alt="building of the moma museum"/>
          <figcaption>Photo by Missdju on Flickr </figcaption>
      </figure>
-     <p>The Musueum of Modern Art or also known as the MoMA is often considered as one of the largest and most influential museums of modern art in the world.The MoMA has so many art exhibits that you could walk in and just look around at all the art work.</p>
+     <p class="article-intro">The Musueum of Modern Art or also known as the MoMA is often considered as one of the largest and most influential museums of modern art in the world.The MoMA has so many art exhibits that you could walk in and just look around at all the art work.</p>
 
      <figure>
        <img src="images/neue.jpg" alt="people lining up outside the neue galerie waiting to go inside"/>
        <figcaption>Photo by Spanaut on Flickr </figcaption>
    </figure>
-     <p>The Neue Galerie is a museum of early twentieth century German and Austrian art and design this Galerie has many painting and art exhibits to look around even though it's a small museum.</p>
+     <p class="article-intro">The Neue Galerie is a museum of early twentieth century German and Austrian art and design this Galerie has many painting and art exhibits to look around even though it's a small museum.</p>
 
      <figure>
        <img src="images/nyc1.jpg" alt="street art in nyc"/>
        <figcaption>Photo by Michael Centeno </figcaption>
    </figure>
-<p>The Museum of Street Art or also known as the MoSA is a museum with a lot of street art in it made by 20 graffiti artist that came together from the orginal 5pointz since 5pointz was demolished the artist wanted to give 5pointz back to the people by creating the Museum of Street Art which is a building with 21 floors filler with street art.</p>
+<p class="article-intro">The Museum of Street Art or also known as the MoSA is a museum with a lot of street art in it made by 20 graffiti artist that came together from the orginal 5pointz since 5pointz was demolished the artist wanted to give 5pointz back to the people by creating the Museum of Street Art which is a building with 21 floors filler with street art the picture above was take on top of 5pointz before it got taken down.</p>
 </article>
 
 
